--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,9 @@ Thumbs.db #thumbnail cache on Windows
 
 
 # End of https://www.toptal.com/developers/gitignore/api/Python
+
+data/
+output/
+samples/**/input/*.csv
+
+
