feat: implemented vertical and horizontal transform (#1)
* added initial horizontal process and main

* updated gitignore

* added requirements

* updated gitignore

* added start of pokemon sample

* updated for flake issues

* added dgraph type option

* added option to output files

* added option to strip id from edge fields

* ensure edge objects are being stripped

* added console and pre csv options

* removed unused vars

* added docker-compose

* implemented upsert creation

* updated samples with generate and publish scripts

* updated generate upsert to drop na objects

* gzip upsert rdf

* updated gitignore and docker compose

* reafctored horizontal

* added example dgraphpandas config for pokemon sample

* added vs code settings json to ignore

* implemented override edge name

* minor performance adjustment for 1 key

* flake

* log the number of upserts being written

* update log level

* add illegal characters for intrinsic subject

* implemented csv edge expansion

* increased memory for dgraph alpha

* added netflix sample

* updated type definitions

* added debug statement to type conversion

* added logic to ensure datetime is in iso format

* updated netflix example

* added netflix example queries

* moved get config into own module

* refactored and broke up vertical helpers

* added vs code debug profile

* updated netflix sample

* added tests for types

* added tests for _expand_csv_edges

* added tests for _join_key_fields

* added tests for _add_dgraph_type_records

* added tests for _break_up_intrinsic_and_edges

* corrected flake issues

* added tests for _compile_illegal_characters_regex and _format_date_fields

* added tests for _remove_illegal_rdf_characters

* ensure frame copies are always passed

* added tests for _remove_na_objects

* added tests for _override_edge_name

* added tests for _ignore_fields

* added tests for _ren

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-The following stacks are not supported:
-Python
-
-
 # Created by https://www.toptal.com/developers/gitignore/api/Python
 # Edit at https://www.toptal.com/developers/gitignore?templates=Python
 
@@ -153,3 +149,11 @@ Thumbs.db #thumbnail cache on Windows
 
 
 # End of https://www.toptal.com/developers/gitignore/api/Python
+
+data/
+output/
+samples/**/input/*.csv
+samples/**/output/*.gz
+samples/**/xidmap/*
+
+settings.json
