--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,3 +31,9 @@ jobs:
     - name: Unit Test
       run: |
         python -m unittest
+    - name: Generate Report
+      run: |
+        coverage run -m unittest
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
