--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
         files: .coverage
