--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,8 +34,6 @@ jobs:
     - name: Generate Report
       run: |
         coverage run -m unittest
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: true
-        files: .coverage
+    - name: Coveralls
+      uses: coverallsapp/github-action@v1.1.2
+
