--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,4 +36,5 @@ jobs:
         coverage run -m unittest
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.2
-
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
