--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Generate Report
       run: |
         coverage run -m unittest
+        coveralls
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.2
       with:
