--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,7 +35,4 @@ jobs:
       run: |
         coverage run -m unittest
         coveralls
-    - name: Coveralls
-      uses: coverallsapp/github-action@v1.1.2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
