--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,4 +35,5 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+          coverage run -m unittest
           coveralls
