build: added coveralls integration (#18)

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,10 +32,8 @@ jobs:
       run: |
         python -m unittest
     - name: Generate Report
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        coverage run -m unittest
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: true
-        files: .coverage
+          coverage run -m unittest
+          coveralls --service=github
