--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,10 +30,10 @@ jobs:
         flake8 . --show-source --count
     - name: Unit Test
       run: |
-        python -m unittest
+        pytest
     - name: Generate Report
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-          coverage run -m unittest
+          coverage run -m pytest
           coveralls --service=github
