docs: added syntax highlights to code snippets

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ nav:
 theme:
   material
 markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.superfences
   - codehilite:
       use_pygments: true
 plugins:
