--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        # https://devguide.python.org/versions/
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
